# implementacja_systemow_ai_2025_03_29

./: .gitignore  README.md  prezentacja.md
01_zaleznosci/01_pip/: requirements.txt
01_zaleznosci/02_conda/: env.yml
02_konfiguracja_cli/: arg_parse.py  args.py
02_konfiguracja_cli/args/: pyproject.toml
02_konfiguracja_cli/args/args/: arg_click.py  arg_click_app.py
03_konfiguracja_env/: .env  env_dot.py  env_var.py
04_konfiguracja_pliki/: config.yaml  config_save.py  config_toml.py  config_toml_pydantic.py  config_yaml.py  config_yaml_pydantic.py
06_pakiet/kalkulator/: pyproject.toml  train_model.py
06_pakiet/kalkulator/kalkulator/: __init__.py  __main__.py  kalkulator.py
07_bentoml/: bentofile.yaml  requirements.txt  service.py  train_model.py
08_streamlit_rest/: frontend.py
09_git/: test.txt
09_mlflow/01_eksperyment/: experiment.py  experiment_2.py  experiment_3.py  pobieranie_modelu.py
09_mlflow/02_project/: evaluate.py  train.py
10_optuna/: 01_optuna.py  02_optuna.py  03_optuna.py
11_dvc/.dvc/: config
11_dvc/data/: dataset.csv.dvc
12_dvc_pipeline/: dvc.yaml  params.yaml  train_model.py
zadania/01_argparse/: zadanie.py
zadania/02_click/: zadanie.py
zadania/03_dotenv/: zadanie.py
zadania/04_toml_yaml/: output.yaml  zadanie.py
zadania/05_struktura/: Makefile  README.md  make_struct.py  notebook.py
zadania/08_hypothesis/: test_set.py
zadania/09_cli/california-housing/: pyproject.toml  train_model.py
zadania/09_cli/california-housing/california_housing/: __main__.py
zadania/10_bentoml/: train_model.py
zadania/11_streamlit/: zadanie.py
zadania/12_mlflow/: zadanie.py
zadania/13_mlflow_project/: train.py
zadania/14_optuna/: zadanie.py
zadania/15_dvc/: dvc.yaml
zadania/16_grupowe/: README.md  download.py  dvc.yaml  make_bento.py  (+2 more)
(+24 files in other folders)
