[tool.poetry]
name = "args"
version = "0.1.0"
description = ""
authors = ["Bartosz Mikulski <mail@mikulskibartosz.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "2.2.3"
click = "8.1.8"
tabulate = "0.9.0"
python-dotenv = "1.0.1"
PyYAML = "6.0.2"
pydantic = "2.10.6"
scikit-learn = "1.6.1"
matplotlib = ">=3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
behave = "^1.2.6"
hypothesis = "^6.130.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
